--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>ANDROID_CLIENT_ID</key>
 	<string>631505308537-bjifrc1emvhh1cqerln0ahs9ojrs9mdt.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
-	<string>AIzaSyBrn_N-ou5z41reqM8T_2diIvniFauJDEc</string>
+	<string></string>
 	<key>GCM_SENDER_ID</key>
 	<string>631505308537</string>
 	<key>PLIST_VERSION</key>
